--- a/style.css
+++ b/style.css
@@ -16,6 +16,13 @@ input {
     border: 1px solid black;
     padding: 4px;
 }
+select {
+    margin:5px;
+    height: 30px;
+    border-radius: 4px;
+    border: 1px solid black;
+    padding: 4px;
+}
 #canvas_container {
     position: relative;
     border:1px solid green;
